--- a/draveness/文章总结(summary)/技术文章配图指南.md
+++ b/draveness/文章总结(summary)/技术文章配图指南.md
@@ -26,3 +26,10 @@
 ### 图片长宽
 1. 宽度保持一定，长度不要太长，宽度考虑平台与博客引擎
 2. 图片大小被合理利用
+### Font size
+### 字号
+1200px 图片中 标题 31px 非标题 18~20px
+### Rounded corner
+### 圆角
+尽量使用圆角避免直角矩形
+圆角在15px以下
