--- a/draveness/文章总结(summary)/技术文章配图指南.md
+++ b/draveness/文章总结(summary)/技术文章配图指南.md
@@ -33,3 +33,6 @@
 ### 圆角
 尽量使用圆角避免直角矩形
 圆角在15px以下
+
+#### [Origin](https://draveness.me/sketch-and-sketch/)
+#### [来源](https://draveness.me/sketch-and-sketch/)
